// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Critere Critere Action 1`] = `
<ul>
  <li
    className="fr-mb-1w"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Être une collectivité engagée dans une politique Économie circulaire et le prouver (via les documents preuves ou un texte justificatif)",
      }
    }
  />
  <div
    className="critere-action-table fr-my-4w"
  >
    <table>
      <thead>
        <tr>
          <th
            className="pl-10"
            colSpan={3}
          >
            Sous-action ou tâche
          </th>
          <th
            className="pr-6"
          >
            Statut ou score requis
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.1
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Identifier un·e élu·e référent·e
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.3
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Identifier l'équipe technique
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.2
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Réaliser le diagnostic de l’économie circulaire
          </td>
          <td>
            20 % minimum
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : PLPDMA
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : système de collecte
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.3.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : valorisation des déchets, dont organiques
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.4.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : pour les impacts environnementaux des émissions et les nuisances
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              3.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          />
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              4.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Rédiger le rapport annuel SPPGD
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ul>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Critere Critere Action Rempli 1`] = `
<ul>
  <li
    className="fr-mb-1w"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Être une collectivité engagée dans une politique Économie circulaire et le prouver (via les documents preuves ou un texte justificatif)",
      }
    }
  />
  <div
    className="critere-action-table fr-my-4w"
  >
    <table>
      <thead>
        <tr>
          <th
            className="pl-10"
            colSpan={3}
          >
            Sous-action ou tâche
          </th>
          <th
            className="pr-6"
          >
            Statut ou score requis
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.1
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Identifier un·e élu·e référent·e
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.1.3
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Identifier l'équipe technique
          </td>
          <td>
            Fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              1.1.2
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Réaliser le diagnostic de l’économie circulaire
          </td>
          <td>
            20 % minimum
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : PLPDMA
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : système de collecte
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.3.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : valorisation des déchets, dont organiques
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              2.4.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Respecter la réglementation : pour les impacts environnementaux des émissions et les nuisances
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              3.2.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Mettre en place le Schéma de promotion des achats publics socialement et écologiquement responsables
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
        <tr
          onClick={[Function]}
        >
          <td
            className="text-center w-[56px]"
          >
            <i
              className="fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C]"
            />
          </td>
          <td
            className="text-right text-xs w-[40px] text-grey625"
          >
            <span>
              4.1.0
            </span>
          </td>
          <td
            className="pl-4 pr-8"
          >
            Rédiger le rapport annuel SPPGD
          </td>
          <td>
            Programmé ou fait
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</ul>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Critere Critere Fichier 1`] = `
<ul>
  <li
    className="fr-mb-1w"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Ajouter les documents officiels de candidature",
      }
    }
  />
  <ul>
    <li
      dangerouslySetInnerHTML={
        Object {
          "__html": "<b>Courrier d’acte de candidature</b> : motivation et palier visé, précision des compétences, engagement à améliorer de façon continue la politique Économie circulaire et coordonnées de la personne référente technique",
        }
      }
    />
    <li
      dangerouslySetInnerHTML={
        Object {
          "__html": "<b>Arrêté préfectoral de création de l’EPCI</b> (Établissement public de coopération intercommunale)",
        }
      }
    />
  </ul>
  <button
    className="fr-btn fr-btn--sm fr-btn--secondary"
    data-test="AddDocsButton"
    onClick={[Function]}
  >
    + Ajouter
  </button>
</ul>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Critere Critere Simple 1`] = `
<ul>
  <li
    className="fr-mb-1w"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Renseigner tous les statuts du référentiel",
      }
    }
  />
  <a
    className="fr-link fr-link--icon-right fr-fi-arrow-right-line fr-mb-2w"
    href="/collectivite/1/referentiels/eci"
    target="_blank"
  >
    Mettre à jour
  </a>
</ul>
`;

exports[`Storyshots App/Pages/Collectivite/Parcours Labellisation/Critere Critere Simple Rempli 1`] = `
<ul>
  <li
    className="fr-mb-1w"
    dangerouslySetInnerHTML={
      Object {
        "__html": "Renseigner tous les statuts du référentiel",
      }
    }
  />
  <i
    className="flex fr-icon fr-fi-checkbox-circle-fill before:text-[#5FD68C] before:pr-3 fr-text--sm fr-mb-0 fr-ml-3w"
  >
    Terminé
  </i>
</ul>
`;
